<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_host">Server Host:</string>
    <string name="enter_server_host">Enter Server Host</string>
    <string name="server_port">Server Port:</string>
    <string name="enter_server_port">Enter Server Port</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="first_name">First Name:</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name:</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter Email</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="click_on_a_marker_to_see_event_details">Click on a marker to see event details</string>
    <string name="first_name_no_colon">First Name</string>
    <string name="last_name_no_colon">Last Name</string>
    <string name="gender_no_colon">Gender</string>
    <string name="name">Name</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="list_view_people">List People</string>
    <string name="list_view_events">List Events</string>
</resources>