<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_margin="8dp"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/firstName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/firstNameFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name_no_colon" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp"
                android:background="@color/design_default_color_primary"/>

            <TextView
                android:id="@+id/lastName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/lastNameFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name_no_colon" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp"
                android:background="@color/design_default_color_primary"/>

            <TextView
                android:id="@+id/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/genderFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_no_colon" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp"
                android:background="@color/design_default_color_primary"/>



        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>